[gd_scene load_steps=4 format=3 uid="uid://cshrfg1c5jgy"]

[ext_resource type="Script" uid="uid://u8juf8kns3wg" path="res://scripts/HubUI.gd" id="1_8mbd6"]

[sub_resource type="LabelSettings" id="LabelSettings_wi61l"]
font_size = 21
font_color = Color(1, 0.764706, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4qglb"]
font_size = 21
font_color = Color(1, 0.764706, 0, 1)

[node name="Hub" type="Node2D"]
script = ExtResource("1_8mbd6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 277.0
offset_bottom = 209.0
color = Color(0.0541003, 9.62615e-08, 0.597024, 0.509804)

[node name="MoneyLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 102.0
offset_top = 6.0
offset_right = 177.0
offset_bottom = 29.0
text = "Money: 0"

[node name="BinaryButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 81.0
offset_top = 166.0
offset_right = 193.0
offset_bottom = 197.0
text = "Binary Puzzle"

[node name="BuyPickaxeButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 89.0
offset_top = 52.0
offset_right = 259.0
offset_bottom = 83.0
text = "Upgrade pickaxe: 0"

[node name="BuyMinerButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 89.0
offset_top = 89.0
offset_right = 259.0
offset_bottom = 120.0
text = "Add miners: 0"

[node name="PickaxePriceLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 52.0
offset_right = 66.0
offset_bottom = 82.0
text = "$10"
label_settings = SubResource("LabelSettings_wi61l")

[node name="MinerPriceLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 87.0
offset_right = 60.0
offset_bottom = 117.0
text = "$10"
label_settings = SubResource("LabelSettings_4qglb")
